# SurveyMAE

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  start_server.bat  start_server.py
BibGuard/: config.yaml
BibGuard/docs/: README.md
config/: main.yaml  models.yaml  search_engines.yaml
config/prompts/: citation_alignment.yaml  corrector.yaml  expert.yaml  reader.yaml  reporter.yaml  verifier.yaml
docs/: CACHE_PERSISTENCE_DESIGN.md  DEVELOPER_GUIDE.md  FRONTEND_DESIGN.md  FUNC_ANALYSIS.md  IMPLEMENTATION_PLAN_continue.md  LITERATURE_SEARCH_PARALLEL_DESIGN.md  LLMxMapReduce_V3 MCP 实现分析与综述框架设计指南.md  LOGGING_DESIGN.md  LOGGING_SYSTEM_ANALYSIS.md  LiRA架构分析与多智能体框架设计指南.md  PDF_PARSING_UPGRADE_DESIGN.md  PLAN_V3_GAP_ANALYSIS.md  RESUME_DESIGN.md  SciSage架构分析与多智能体框架设计指南.md  SurveyMAE_Implementation_Supplement.md  SurveyMAE_Implementation_Supplement_v3.md  SurveyMAE_Plan_v2.md  SurveyMAE_Plan_v3.md  SurveyMAE_Refactoring_Design.md  SurveyMAE_Report_Template.md  tool_evidence_schema.json
scripts/: grobid.ps1  grobid.sh  render_citation_graph_pyvis.py  run_evaluation.ps1  run_evaluation.sh
src/: __init__.py  main.py
src/agents/: __init__.py  base.py  corrector.py  expert.py  output_schema.py  reader.py  reporter.py  verifier.py
src/core/: __init__.py  config.py  log.py  mcp_client.py  search_config.py  state.py
src/graph/: __init__.py  builder.py  edges.py
src/tools/: __init__.py  citation_analysis.py  citation_analysis_server.py  citation_checker.py  citation_checker_server.py  citation_graph_analysis.py  (+11 more)
tests/: __init__.py  conftest.py
(+51 files in other folders)
