[project]
name = "surveymae"
version = "0.1.0"
description = "Multi-Agent Dynamic Evaluation Framework for LLM-Generated Surveys"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "SurveyMAE Team"}
]
dependencies = [
    # Core Framework
    "langgraph>=0.2.0",
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
    # MCP Protocol
    "mcp>=1.1.0",
    # Type Safety & Configuration
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "pyyaml>=6.0.0",
    # PDF Processing
    "pymupdf4llm>=0.0.15",
    "pypdf>=4.3.0",
    # Async & HTTP
    "httpx>=0.27.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    # Utilities
    "loguru>=0.7.0",
    "pyvis>=0.3.2",
    "infomap>=2.9.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "UP", "W"]

[tool.pytest.ini_options]
markers = [
    "integration: integration tests that may require external services or real files",
]
